added announcements and details page

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -13,3 +13,5 @@
 @import 'pages/membership';
 @import 'pages/associationnews';
 @import 'pages/associationdetails';
+@import 'pages/announcements';
+@import 'pages/announcementsdetails';
