--- a/sass/pages/_announcements.scss
+++ b/sass/pages/_announcements.scss
@@ -330,6 +330,7 @@
                                     gap: 20px;
                                     @media(max-width: 1199px){
                                         grid-template-columns: repeat(1, 1fr);
+                                        gap: 60px;
                                     }
 
                                     // grid-row-gap: 50px;
@@ -394,7 +395,7 @@
                                                 margin-bottom: 0;
                                                 font-size: 24px;
                                                 font-style: normal;
-                                                font-weight: 500;
+                                                font-weight: 600;
                                                 line-height: 34px;
                                                 @media(max-width: 991px){
                                                     font-size: 20px;
@@ -560,7 +561,7 @@
                                 align-items: center;
                                 @media(max-width: 991px){
                                     margin-top: 30px;
-                                    justify-content: flex-start;
+                                    justify-content: center;
                                 }
                                 ul {
                                     margin-bottom: 0;
@@ -576,8 +577,8 @@
                                             line-height: 16px;
                                             border-radius: 6px;
                                             border: 1px solid #ddd;
-                                            width: 36px;
-                                            height: 36px;
+                                            min-width: 36px;
+                                            min-height: 36px;
                                             display: flex;
                                             justify-content: center;
                                             align-items: center;
