--- a/sass/pages/_associationnews.scss
+++ b/sass/pages/_associationnews.scss
@@ -465,6 +465,7 @@
 									// grid-row-gap: 50px;
 									@media(max-width: 991px){
 										grid-template-columns: repeat(2, 1fr);
+										gap: 60px;
 									}
 									@media(max-width: 767px){
 										grid-template-columns: repeat(1, 1fr);
@@ -534,9 +535,9 @@
 												h3 {
 													color: $black;
 													margin-bottom: 0;
-													font-size: 20px;
+													font-size: 21px;
 													font-style: normal;
-													font-weight: 500;
+													font-weight: 600;
 													line-height: 30px;
 												}
 											}
@@ -578,8 +579,8 @@
 											line-height: 16px;
 											border-radius: 6px;
 											border: 1px solid #ddd;
-											width: 36px;
-											height: 36px;
+											min-width: 36px;
+											min-height: 36px;
 											display: flex;
 											justify-content: center;
 											align-items: center;
@@ -630,7 +631,7 @@
 												color: $black;
 												@media(max-width: 991px){
 													padding: 6px 12px;
-													width: 36px;
+													min-min-width: 36px;
 													height: 36px;
 													font-size: 12px;
 												}
@@ -665,8 +666,8 @@
 												color: $black;
 												@media(max-width: 991px){
 													padding: 6px 12px;
-													width: 36px;
-													height: 36px;
+													min-width: 36px;
+													min-height: 36px;
 												}
 												span{
 													@media(max-width: 991px){
